--- a/src/style.scss
+++ b/src/style.scss
@@ -1,14 +1,11 @@
 body {
   padding: 0;
   margin: 0;
+  display: flex;
 }
 
 .cell {
   background-color: red;
-
-  &:hover {
-    background-color: rgb(142, 19, 19);
-  }
 }
 
 .hit {
@@ -21,10 +18,28 @@ body {
 
 .row {
   display: flex;
+}
 
+#board {
   div {
-    height: 60px;
-    width: 60px;
-    border: solid;
+    div {
+      height: 60px;
+      width: 60px;
+      border: solid;
+
+      &:hover {
+        background-color: rgb(142, 19, 19);
+      }
+    }
+  }
+}
+
+#grid {
+  div {
+    div {
+      height: 20px;
+      width: 20px;
+      border: solid;
+    }
   }
 }
