--- a/src/style.scss
+++ b/src/style.scss
@@ -1,34 +1,55 @@
+$radar-size: 37rem;
+$radar-colour: rgb(32, 65, 20);
+$line-colour: rgb(52, 212, 52);
+$line-border: 0.5px solid $line-colour;
+$cell-size: 40px;
+
 body {
   padding: 0;
   margin: 0;
   display: flex;
+  flex-direction: column;
+  background-color: rgb(176, 169, 169);
+  background-image: url("./images/89254.jpg");
+  background-size: cover;
 }
 
 .cell {
-  background-color: red;
+  background-color: transparent;
 }
 
 .hit {
-  background-color: purple;
+  background-color: rgb(40, 136, 2);
 }
 
 .occupied {
-  background-color: blue;
+  background-color: rgb(22, 146, 255);
+}
+
+.occupied.hit {
+  background-color: red;
 }
 
 .row {
   display: flex;
 }
 
+#game {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
+}
+
 #board {
+  z-index: 10000;
   div {
     div {
-      height: 60px;
-      width: 60px;
-      border: solid;
-
+      height: $cell-size;
+      width: $cell-size;
+      border: $line-border;
       &:hover {
-        background-color: rgb(142, 19, 19);
+        background-color: rgb(52, 104, 33);
       }
     }
   }
@@ -37,9 +58,82 @@ body {
 #grid {
   div {
     div {
-      height: 20px;
-      width: 20px;
-      border: solid;
+      height: $cell-size;
+      width: $cell-size;
+      border: $line-border;
     }
+  }
+}
+
+.radar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $radar-colour;
+  border: $line-border;
+  border-radius: calc($radar-size / 2);
+  width: $radar-size;
+  height: $radar-size;
+  position: relative;
+  background-size: $radar-size $radar-size;
+  margin: 50px;
+}
+
+.radar .pointer {
+  position: absolute;
+  z-index: 1024;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 50%;
+  will-change: transform;
+  transform-origin: 50% 100%;
+  border-radius: 50% 50% 0 0 / 100% 100% 0 0;
+  background-image: linear-gradient(
+    135deg,
+    $line-colour 0%,
+    rgba(0, 0, 0, 0.02) 70%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  clip-path: polygon(
+    100% 0,
+    100% 10%,
+    //控制扇形角度 100% => 135deg
+    50% 100%,
+    0 100%,
+    0 0
+  );
+
+  animation: rotate360 3s infinite linear;
+}
+
+.radar .pointer:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  bottom: -1px;
+  border-top: 2px solid $line-colour;
+  box-shadow: 0 0 3px $line-colour;
+  border-radius: 9px;
+}
+
+@keyframes rotate360 {
+  0% {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
+
+@keyframes shadow {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
