--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,20 @@
-$radar-size: 37rem;
+@font-face {
+  font-family: "blackOps";
+  src: url(/src/fonts/BlackOpsOne-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "manrope";
+  src: url(/src/fonts/manrope.ttf) format("truetype");
+}
+
 $radar-colour: rgb(32, 65, 20);
 $line-colour: rgb(52, 212, 52);
 $line-border: 0.5px solid $line-colour;
-$cell-size: 40px;
+$cell-size: 2.5em;
+$radar-size: auto;
+$grid-size: calc($cell-size * 8);
+$radar-font: "manrope";
 
 body {
   padding: 0;
@@ -10,8 +22,20 @@ body {
   display: flex;
   flex-direction: column;
   background-color: rgb(176, 169, 169);
-  background-image: url("./images/89254.jpg");
   background-size: cover;
+  align-items: center;
+}
+
+#title {
+  font-size: 8em;
+  font-family: "blackOps";
+  color: rgb(95, 94, 94);
+}
+
+.radarText {
+  color: $line-colour;
+  font-family: $radar-font;
+  font-size: 2em;
 }
 
 .cell {
@@ -38,7 +62,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0px;
+  padding: 3rem;
+  background-color: $radar-colour;
+  border-radius: 3rem;
 }
 
 #board {
@@ -58,8 +84,8 @@ body {
 #grid {
   div {
     div {
-      height: $cell-size;
-      width: $cell-size;
+      height: calc($cell-size / 2);
+      width: calc($cell-size / 2);
       border: $line-border;
     }
   }
@@ -76,7 +102,7 @@ body {
   height: $radar-size;
   position: relative;
   background-size: $radar-size $radar-size;
-  margin: 50px;
+  margin: 2em;
 }
 
 .radar .pointer {
@@ -108,6 +134,58 @@ body {
 }
 
 .radar .pointer:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  bottom: -1px;
+  border-top: 2px solid $line-colour;
+  box-shadow: 0 0 3px $line-colour;
+  border-radius: 9px;
+}
+
+.gridRadar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $radar-colour;
+  border: $line-border;
+  border-radius: calc($radar-size / 2);
+  width: $grid-size;
+  height: $grid-size;
+  position: relative;
+  background-size: $grid-size $grid-size;
+  margin: 2em;
+}
+
+.gridRadar .pointer {
+  position: absolute;
+  z-index: 1024;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 50%;
+  will-change: transform;
+  transform-origin: 50% 100%;
+  border-radius: 50% 50% 0 0 / 100% 100% 0 0;
+  background-image: linear-gradient(
+    135deg,
+    $line-colour 0%,
+    rgba(0, 0, 0, 0.02) 70%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  clip-path: polygon(
+    100% 0,
+    100% 10%,
+    //控制扇形角度 100% => 135deg
+    50% 100%,
+    0 100%,
+    0 0
+  );
+
+  animation: rotate360 3s infinite linear;
+}
+
+.gridRadar .pointer:after {
   content: "";
   position: absolute;
   width: 100%;
