--- a/src/style.scss
+++ b/src/style.scss
@@ -15,13 +15,25 @@ $cell-size: 2.5em;
 $radar-size: auto;
 $grid-size: calc($cell-size * 8);
 $radar-font: "manrope";
+$metal: rgb(45, 45, 45);
+
+html {
+  height: 100%;
+}
 
 body {
-  padding: 0;
+  padding: 0px;
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-color: rgb(176, 169, 169);
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(212, 212, 212),
+    rgb(36, 36, 36)
+  );
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 100%;
   background-size: cover;
   align-items: center;
 }
@@ -29,7 +41,7 @@ body {
 #title {
   font-size: 8em;
   font-family: "blackOps";
-  color: rgb(95, 94, 94);
+  color: $metal;
 }
 
 .radarText {
@@ -64,11 +76,14 @@ body {
   justify-content: center;
   padding: 3rem;
   background-color: $radar-colour;
+  border-style: solid;
+  border-color: $metal;
   border-radius: 3rem;
+  border-width: 2em;
 }
 
 #board {
-  z-index: 10000;
+  z-index: 1;
   div {
     div {
       height: $cell-size;
@@ -107,7 +122,7 @@ body {
 
 .radar .pointer {
   position: absolute;
-  z-index: 1024;
+  z-index: 0;
   left: 0%;
   right: 0%;
   top: 0%;
@@ -213,5 +228,25 @@ body {
   }
   to {
     opacity: 0;
+  }
+}
+
+.alert {
+  position: fixed; /* Stay in place */
+  z-index: 2; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  div {
+    background-color: $radar-colour;
+    font-family: $radar-font;
+    border: $line-border;
   }
 }
