--- a/src/style.scss
+++ b/src/style.scss
@@ -9,18 +9,16 @@
 }
 
 $background-colour: rgb(22, 21, 86);
-$line-colour: rgb(52, 212, 52);
-$line-border: 0.5px solid $line-colour;
+$line-colour: rgb(255, 255, 255);
+$line-border: 1px solid rgb(255, 255, 255);
 $cell-size: 2.5em;
 $radar-size: auto;
 $grid-size: calc($cell-size * 8);
 $radar-font: "manrope";
 $text-colour: rgb(255, 255, 255);
 $hover-colour: rgb(52, 104, 33);
-
-html {
-  height: 100%;
-}
+$button-colour: rgb(75, 78, 154);
+$button-border: 4px solid rgb(53, 63, 89);
 
 body {
   padding: 0px;
@@ -33,6 +31,7 @@ body {
   height: 100%;
   background-size: cover;
   align-items: center;
+  justify-content: center;
 }
 
 #title {
@@ -133,11 +132,13 @@ body {
 .button {
   background-color: $background-colour;
   font-family: $radar-font;
-  border: $line-border;
+  border: $button-border;
+  border-radius: 20px;
   color: $line-colour;
-  padding: 2em;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  background-color: $button-colour;
+  padding: 4em;
+  padding-top: 2em;
+  padding-bottom: 2em;
   margin: 2em;
   &:hover {
     background-color: $hover-colour;
